# softwarepassport

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  test.db
alembic/versions/: 3f27a8c6fc94_init.py
backend/: .gitignore  README.md  README2.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 3f27a8c6fc94_init.py  7bf590ff3c73_add_planetmint_tag_column_to_table_.py
backend/ipr/: app.py  config.py
backend/softwarepassport/: app.py  config.py  database.py  models.py
backend/tests/: locustfile.py  test_ipr.py
components/: FabricModal.tsx  Layout.tsx  StatusBar.tsx
frontend/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/components/: Alert.tsx  CopyrightHolders.tsx  FabricModal.tsx  Navbar.tsx  SawroomModal.tsx  StatusBar.tsx  VerificationButton.tsx
frontend/pages/: _app.tsx  index.tsx
ipr/: app.py  config.py  crud.py  database.py  models.py  repo.py  schemas.py
pages/: _app.tsx  _document.tsx  index.tsx
templates/: index.html
tests/: test_ipr.py
